# voidloop-quest

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  DEVELOPMENT.md  FIX_SUMMARY.md  HOOK_ROUTE_TEST.md  IMPLEMENTATION_SUMMARY.md  MATCHMAKING_GUIDE.md  NATS_RETRY_TESTING.md  README.md  ROUTING_FIX_SUMMARY.md  TROUBLESHOOTING.md  WASM_BUILD.md  build-wasm.sh  deploy.sh  dev-setup.sh  docker-compose.localdev.yml  docker-compose.prod.yml  env.template  lobby_demo.html  secure-demo.sh  setup.sh  test-lobby-fix.sh  test-nats-retry.sh  test-security-fix.sh  test-server-args.sh  validate-nats-retry.sh
.github/: copilot-instructions.md
.github/workflows/: build-server.yaml  build-wasm.yaml  fly-deploy-client.yml
assets/: vey.gltf
assets/logo-backups/: 1stblogpost.md.backup
client/: Cargo.toml  Dockerfile  fly.toml
client/src/: client_plugin.rs  main.rs
client/src/screens/: connect.rs  lobby.rs  mod.rs
client/www/: .htaccess  index.html  voidloop-quest.js  wasm_server.py
docs/: deployment.md  deployments.md  nats-certificates.md
lobby-service/: Cargo.toml  Dockerfile  README.md
lobby-service/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: build_info.rs  certificate.rs  main.rs  matchmaker.rs  matchmaker_main.rs  server_plugin.rs
shared/: Cargo.toml
shared/src/: lib.rs  protocol_plugin.rs  renderer.rs  shared_plugin.rs
tools/lobby/: Cargo.toml  README.md
tools/lobby-server/: Cargo.toml  Dockerfile  README.md
tools/lobby-server/src/: main.rs
tools/lobby/src/: main.rs
utils/: set-caroot-argument.sh
