[package]
name = "voidloop-quest-client"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = ["bevygap"]
bevygap = ["dep:bevygap_client_plugin"]
matchmaker-tls = ["bevygap_client_plugin/matchmaker-tls"]

[dependencies]
bevy = {workspace = true, features = [
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_winit",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui"
]}
shared = {path = "../shared"}
lightyear.workspace = true
avian2d.workspace = true
serde.workspace = true
leafwing-input-manager = {workspace = true, features = ["ui", "asset"]}
bevygap_client_plugin = {workspace = true, optional = true}

# on wasm, we need web-sys too:
[target."cfg(target_family = \"wasm\")".dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }

[lints]
workspace = true

