[package]
name = "voidloop-quest-client"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = ["bevygap"]
bevygap = ["dep:bevygap_client_plugin", "dep:edgegap_async", "dep:tokio"]
matchmaker-tls = ["bevygap_client_plugin/matchmaker-tls"]

[dependencies]
bevy = {workspace = true, features = [
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_winit",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui"
]}
shared = {path = "../shared", features = ["bevygui"]}
lightyear.workspace = true
avian2d.workspace = true
serde.workspace = true
leafwing-input-manager = {workspace = true, features = ["ui", "asset"]}
bevygap_client_plugin = {workspace = true, optional = true}
edgegap_async = { git = "https://github.com/bananabit-dev/bevygap.git", optional = true }
tokio = { version = "1.47.0", features = ["sync","macros","io-util","rt","time"], optional = true }
rand = "0.8"

# on wasm, we need web-sys too and WebGL2 features:
[target."cfg(target_family = \"wasm\")".dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }

[target."cfg(target_family = \"wasm\")".dependencies.bevy]
workspace = true
features = [
  "bevy_asset",
  "bevy_state", 
  "bevy_color",
  "bevy_winit",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_render",
  "bevy_core_pipeline",
  "webgl2"
]

[lints]
workspace = true

