[package]
name = "lobby-service"
version.workspace = true
edition = "2021"
authors.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
warp = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4"] }
std-semaphore = "0.1"
parking_lot = "0.12"