[package]
name = "server"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = ["bevygap"]
gui = ["shared/gui"]
bevygap = ["dep:bevygap_server_plugin"]

[dependencies]
bevy.workspace = true
shared = {path = "../shared"}
lightyear.workspace = true
avian2d.workspace = true
serde.workspace = true
leafwing-input-manager.workspace = true
bevygap_server_plugin = {workspace = true, optional = true}
clap.workspace = true
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

[lints]
workspace = true

[build-dependencies]
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = { version = "1.0.1", features = ["build", "cargo", "rustc", "si"] }